# bobis-quote-MT5-marketdata-bridge

./: .env.example  .gitignore  CHANGELOG.md  README.md  candle_service.py  configs.py  example.env  fast-api.rest  install.ps1  install_candle_service.ps1  install_windows_service.ps1  main.py  mt5_terminal_to_win_startup.ps1  pyproject.toml  requirements.txt  tradeStore.py  trading.py  utils.py
.github/workflows/: ci.yml
docs/: usage.md
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: __init__.py  entry.py  run.py
src/api/: __init__.py  main.py  routes.py
src/core/: __init__.py  configs.py  constants.py  market_data.py  models.py  performance.py
tests/unit/: test_market_data.py
