[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data"
version = "1.0.0"
description = "Production-grade market data API for MetaTrader 5"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Editor's Quote", email = "amdevfred@gmail.com" }
]

keywords = ["MT5", "MetaTrader5", "trading", "market-data", "forex", "API"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "FastAPI>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "MetaTrader5>=5.0.4993",
    "pytz>=2025.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
]

# ✅ CLI ENTRY POINT (THIS FIXES YOUR TERMINAL ISSUE)
[project.scripts]
market-data = "market_data.entry:main"

[project.urls]
Documentation = "https://github.com/amfredfred/bobis-quote-MT5-marketdata-bridge"
Repository = "https://github.com/amfredfred/bobis-quote-mt5-marketdata-bridge"
Issues = "https://github.com/amfredfred/bobis-quote-mt5-marketdata-bridge/issues"

# ✅ FIXED PACKAGE DISCOVERY (IMPORTANT)
[tool.setuptools.packages.find]
where = ["src"]

# ─────────────────────────────────────────────
# Formatting / Linting
# ─────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"